--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,8 +4,9 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(1, 1, 1, 0.87);
+  background: #e5e5ee;
+;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -33,6 +34,8 @@ a:hover {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  margin-left: 50px;
+  margin-bottom: 15%;
 }
 
 button {
