--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,107 +1,184 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Lato", sans-serif;
-}
-
-.home,
-.reports,
-.products {
-  display: flex;
-  height: 90vh;
-  align-items: center;
-  justify-content: center;
-  font-size: 3rem;
-  background-color: #000;
-  color: #fff;
-}
-
-/* Navbar CSS */
-.navbar {
-  background-color: #8f8a8a;
-  height: 80px;
-  display: block;
-  width: 100%;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.menu-bars {
-  margin-left: 2rem;
-  font-size: 2rem;
-  background: none;
-  color: #000;
-}
-
-.nav-menu {
-  background-color: #ffffff;
-  width: 250px;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  position: fixed;
-  top: 0;
-  left: -100%;
-  transition: 850ms;
-}
-
-.nav-menu.active {
-  left: 0;
-  transition: 450ms;
-}
-
-.nav-text {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 8px 0px 8px 16px;
-  list-style: none;
-  height: 60px;
-}
-
-.nav-text a {
-  text-decoration: none;
-  color: #151414;
-  font-size: 18px;
-  width: 95%;
+/* .container{
+  border: 2px solid rgb(18, 18, 18);
+  width: 60%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  padding: 0 16px;
-  border-radius: 4px;
+  margin-top: 8%;
+  margin-left: 15%;
+  margin-bottom: 25%;
+  
+} */
+
+.parent {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  height: 60%;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  margin-left: 60px;
+  margin-right: 60px;
+  box-shadow: 5px 5px 5px rgb(122, 123, 123);
+  background-color: rgb(255, 255, 255);
 }
 
-.nav-text a:hover {
-  background-color: #000000;
-  color: #fff;
+.label-custom {
+  color: #786a6a;
+  padding-left: 20px;
+}
+.input-custom {
+  background-color: white;
+  border: none;
+  color: black;
+  width: 60%;
+  margin-bottom: 10px;
+  height: 35px;
+  font-size: 16px;
+  margin-left: 17px;
+}
+.button-custom {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #196c6c;
+  cursor: pointer;
+  transition: border-color 0.25s;
+  margin-left: 18%;
+  width: 61%;
+}
+.div-last-button {
+  margin-top: 10%;
+}
+.div-form {
+  background-color: white;
+  border-radius: 12px;
+  width: 60%;
+  margin-bottom: 5px;
+  margin-left: 18%;
+  box-shadow: 5px 5px 5px rgb(209, 212, 212);
 }
 
-.nav-menu-items {
+.span-from {
+  margin-left: 480px;
+}
+.fram1 {
+  /* background-color: rgb(255, 255, 255); */
+  /* border: 2px solid gray; */
+  /* justify-items: center; */
+}
+.fram2 {
+  border: 2px solid gray;
+  background-color: #196c6c;
+}
+.eye-button {
+  margin-left: 81px;
+  background-color: white;
+  color: black;
+}
+
+.main-div {
   width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  background-color: #196c6c;
 }
 
-.navbar-toggle {
-  background-color: #ffffff;
-  width: 80%;
-  height: 80px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+.first-fram-div {
+  width: 40%;
+  background-color: #196c6c;
 }
-
-span {
-  margin-left: 16px;
+.second-fram-div {
+  width: 157%;
+  margin: 10px;
+  margin-left: -445px;
+  border-radius: 50px;
+  height: 100wh;
+  background-color: white;
 }
-
-.home-dev{
+.header-div {
+  margin: 20px;
+  border-bottom: 4px solid rgb(207, 205, 205);
+}
+.custom-h2 {
+  display: inline-flex;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 600;
+}
+.header-profile{
+  /* right: 67px; */
+  /* position: fixed; */
+  margin-left: 750px;
+  margin-top: 7px;
+}
+.logout-button{
+  background-color: white;
+  color: black;
+}
+.user-label{
+  font-size: x-large;
+  margin-top: -6px;
+  margin: 5px;
+}
+.feature-div{
+  margin: 7px;
+}
+.custom-select{
+  background-color: aliceblue;
+  color: black;
+  width: 120px;
+  height: 37px;
+  border-radius: 9px;
+  margin: 10px;
+  border: 2px solid rgb(204, 199, 199);
+  margin-left: 50%;
+  font-size: large;
+}
+.search-input-custom{
+  background-color: rgb(255, 255, 255);
+  color: black;
+  width: 270px;
+  height: 32px;
+  font-size: large;
+  border-radius: 9px;
+  border: 2px solid rgb(204, 199, 199);
+  padding: 5px;
+  margin-left: 10px;
+}
+.search-button{
+  background-color: rgb(255, 255, 255);
+  color: rgb(135, 131, 131);
+  border: 2px solid rgb(204, 199, 199);
   
 }
-.container{
-  border: 2px solid white;
-  display: inline-flex;
-  margin-top: 20%;
-  margin-left: 20%;
+.profile-img{
+  margin: auto;
+    display: block;
+}
+.album-p{
+  text-align: center;
+  background-color: #CEFFFF;
+  border-radius: 20px;
+}
+.email-p{
+  text-align: center;
+  color: gray
+}
+.footer-div{
+  margin-left: 826px;
+}
+.page-div{
+  position: absolute;
+  left: 363px;
+}
+.pagination-button{
+  background-color: white;
+  color: gray;
+  border-radius: 40px;
+  border: 2px solid gray;
 }
